--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,24 @@ body {
   width: 100%;
   height: 50px;
   margin: 15px 0;
+  color: #FFF;
 
   border: 5px solid black;
+}
+
+.list-item-action-button {
+  margin: 0 5px;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.item-check {
+  margin-right: 10px;
+}
+
+.todo-title {
+  flex: auto;
 }
 
 .search-input,
