--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,10 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   margin: 15px 0;
   color: #FFF;
+  word-wrap: normal;
 
   border: 5px solid black;
 }
@@ -42,8 +43,14 @@ body {
   margin-right: 10px;
 }
 
-.todo-title {
+.todo-title,
+.item-edit {
   flex: auto;
+}
+
+.item-edit {
+  border: none;
+  font-size: 1em;
 }
 
 .search-input,
