Added grab/grabbing styling to list items.

--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,13 @@ body {
   margin: 15px 0;
   color: #FFF;
   word-wrap: normal;
+  cursor: grab;
 
   border: 5px solid black;
+}
+
+.list-item:active {
+  cursor: grabbing;
 }
 
 .list-item-action-button {
