Refactored "grab" css and made drag icon grab-able.

--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,15 @@ body {
   margin: 15px 0;
   color: #FFF;
   word-wrap: normal;
-  cursor: grab;
 
   border: 5px solid black;
 }
 
-.list-item:active {
+.grab {
+  cursor: grab;
+}
+
+.grab:active {
   cursor: grabbing;
 }
 
